force-app/main/default/objects/Cart_Activity__c/Cart_Activity__c.object-meta.xml
<CustomObject>
    <label>Cart Activity</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Cart Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cart Activities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>