force-app/main/default/objects/Cart_Activity__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cart Activities</relationshipLabel>
    <relationshipName>Cart_Activities</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>Replaces Login_Credentials__c as the customer link, now that the storefront login runs on Account (Customer Account Detail record type). Login_Credentials__c is left in place but no longer populated by new activity rows.</description>
</CustomField>