force-app/main/default/objects/Cart_Activity__c/fields/Login_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Login_Credentials__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Customer Account (Legacy)</label>
    <referenceTo>Login_Credentials__c</referenceTo>
    <relationshipLabel>Cart Activities</relationshipLabel>
    <relationshipName>Cart_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>